--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -26,7 +26,8 @@
       "remoteCopySources": true,
       "rsyncCommandArgs": "-t --delete --delete-excluded",
       "remoteCopyBuildOutput": false,
-      "remoteCopySourcesMethod": "rsync"
+      "remoteCopySourcesMethod": "rsync",
+      "remoteInstallRoot": "/home/tars/cpp"
     }
   ]
 }
